# facial-recognition-app

./: .gitignore  README.md  app.py  model.py  pyproject.toml
recognition/: __init__.py  constants.py  learning.py  preprocessing.py  setup.py
